2007-01-25  Akim Demaille  <demaille@gostai.com>

	More ostringstream
	* src/uvariablename.cc: Here.
	This file has tricky uses of a buffer on thousands of lines
	of distance.  It sucks.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Less buffers
	* src/uconnection.cc, src/uobj.cc, src/uvalue.cc: More ostringstreams.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Less buffers
	* src/uconnection.cc: More ostringstream.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Less static buffers
	* src/userver.cc: Use ostringstreams.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Use ostringstream
	* src/uexpression.cc: here. Kill C.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	More std::ostringstream
	* src/ucommand.cc: Stop using static buffers.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Stop using large buffers to please the Aibo (and C++ programmers)
	* src/ucallid.hh, src/ucallid.cc: Now its ctor takes std::strings
	instead of const char*.
	* src/ucommand.cc (buffer_t, NOT_ON_AIBO): Remove.
	Replace all their uses with ostringstreams.	
	Also, from time to time, make better use of the dynamic casted
	variables to avoid yet another cast.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Fix include
	* src/uexpression.cc (libport/assert.hh): include it for most
	recent libport.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Coding style changes
	* src/userver.cc: here.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Handle URBI_PATH
	* src/console.cc: in the constructor rather than in the main.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	More passert
	* src/uexpression.cc: here.
	Also, remove debugging code.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Factor the parsing of "at"
	* src/ucommand.hh, src/ucommand.cc: Rename AT_FLAVOR as AT.
	* src/parser/bison/ugrammar.y (and.opt): New.
	Use it to factor the parsing of at.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	UCommand_AT is Flavorable